--- a/index.html
+++ b/index.html
@@ -5,36 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Code Quiz</title>
-</head>
 <header>
-    <button id="countdownbtn" class="countdownbtn"> start! </button>
-    <div id="countdown" class="countdown"></div>
-
+    <p id="countdown"> countdown</p>
 </header>
-<body>
-    <section>
-        <main>
-            <div id="countdown" class="countdown"></div>
-        <div id="promptbox" class="box"> 
-
-            <div id="question" class="question"> question</div> 
-            <div id="answer" class="answer"> answers
-        
-                <button id="answer-btn" class="answer-btn"> A </button>
-                <button id="answer-btn" class="answer-btn"> B</button>
-                <button id="answer-btn" class="answer-btn"> C </button>
-                <button id="answer-btn" class="answer-btn"> D </button>
-            </div>
-
-        </div>
-
+<div id="frame001">
+    <div id="text001">
+        <h2>Quiz</h2>
     
-
+        Question: <text id="number001">0</text><br />
+        Score: <text id="score001">0</text>
+    <hr />
+            <div id="message001">Click Begin to start</div><br />
         </div>
-    </section>
-</main>
-
-    <script src="./assets/js/script.js"></script> 
-</body>
-</html>
+    <div id="text002">
+        <div id="question001"></div>
+        <div id="answerbtn1"></div>
+        <div id="answerbtn2"></div>
+        <div id="answerbtn3"></div>
+        <div id="answerbtn4"></div>
+        <div id="answer001"></div>
+        <div id="text001">
+            <div id="disappear001"><button class="button1" onclick="begin001()">Begin</button></div>
+        </div>
+        <div id="next001"></div>
+   <script src="assets/js/script.js"></script>
+    </div>
+    </div>
